applications/letschat/base/lets-chat-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: letschat-route
spec:
  to:
    kind: Service
    name: letschat-svc
    weight: 100
  port:
    targetPort: http
status:
  ingress: []
